infrastructure/dev/lobby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: throneteki-lobby
    namespace: throneteki-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: throneteki-lobby
    template:
        metadata:
            labels:
                app: throneteki-lobby
        spec:
            containers:
                - name: throneteki-lobby
                  image: throneteki/throneteki-lobby:latest
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: throneteki-lobby
    namespace: throneteki-dev
spec:
    selector:
        app: throneteki-lobby
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
