infrastructure/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: throneteki-lobby-dev
    namespace: throneteki-dev
    annotations:
        kubernetes.io/ingress.class: 'traefik'
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
    rules:
        - host: dev.throneteki.net
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: throneteki-lobby
                            port:
                                number: 80
        # - host: dev.theironthrone.net
        #   http:
        #       paths:
        #           - path: /
        #             pathType: Prefix
        #             backend:
        #                 service:
        #                     name: throneteki-lobby
        #                     port:
        #                         number: 80
    tls:
        - hosts:
              - dev.throneteki.net
              #   - dev.theironthrone.net
          secretName: throneteki-lobby-dev-tls
